added pre-quiz section

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 <body>
+    <!-- ****** View Highscore Button and Timer ****** -->
     <header>
         <button id="view-highscore">View Highscores</button>
         <span id="time-left" data-state="started">Time left</span>
     </header>
+    <main>
+    <!-- ****** Start Quiz ****** -->
+        <section id="pre-quiz">
+            <h1 class="title">Coding Quiz Challenge</h1>
+            <p>Welcome to this JavaScipt Coding Quiz! You will have 60 seconds to answer 5 questions related to JavaScript. Wrong answers will deduct 12 seconds from your time. Your score is determined by the time left remaining. Good luck!</p>
+            <button id="start-quiz">Start Quiz</button>
+        </section>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
