timer now starts with 'start quiz' button

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- ****** View Highscore Button and Timer ****** -->
     <header>
         <button id="view-highscore">View Highscores</button>
-        <span id="time-left" data-state="started">Time left</span>
+        <span id="time-left">Time: 90</span>
     </header>
     <main>
-    <!-- ****** Start Quiz ****** -->
+    <!-- ****** Pre-Quiz Section ****** -->
         <section id="pre-quiz">
             <h1 class="title">Coding Quiz Challenge</h1>
             <p>Welcome to this JavaScipt Coding Quiz! You will have 60 seconds to answer 5 questions related to JavaScript. Wrong answers will deduct 12 seconds from your time. Your score is determined by the time left remaining. Good luck!</p>
-            <button id="start-quiz">Start Quiz</button>
+            <button id="start-btn" data-state="stopped">Start Quiz</button>
         </section>
     </main>
     <script src="./assets/js/script.js"></script>
