--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     <!-- ****** Quiz Questions and Multiple Choice ****** -->
         <section id="quiz-questions">
             <p id="question"></p>
-            <input type="radio" name="answer" value="1" id="answer1"><label for="answer1" id="label1"></label><br>
-	        <input type="radio" name="answer" value="2" id="answer2"><label for="answer2" id="label2"></label><br>
-	        <input type="radio" name="answer" value="3" id="answer3"><label for="answer3" id="label3"></label><br>
-            <input type="radio" name="answer" value="4" id="answer4"><label for="answer4" id="label4"></label><br>
-            <input type="radio" name="answer" value="5" id="answer5"><label for="answer3" id="label5"></label><br>
-            <button onclick="checkAnswer()">Submit Answer</button>
+            <article id="inputs">
+                <input type="radio" name="answer" value="1" id="answer1"><label for="answer1" id="label1"></label><br>
+	            <input type="radio" name="answer" value="2" id="answer2"><label for="answer2" id="label2"></label><br>
+	            <input type="radio" name="answer" value="3" id="answer3"><label for="answer3" id="label3"></label><br>
+                <input type="radio" name="answer" value="4" id="answer4"><label for="answer4" id="label4"></label><br>
+                <input type="radio" name="answer" value="5" id="answer5"><label for="answer3" id="label5"></label><br>
+                <button onclick="checkAnswer()">Submit Answer</button>
+            </article>
             <p id="result"></p>
         </section>
     </div>
