added questions and post quiz

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 	            <input type="radio" name="answer" value="2" id="answer2"><label for="answer2" id="label2"></label><br>
 	            <input type="radio" name="answer" value="3" id="answer3"><label for="answer3" id="label3"></label><br>
                 <input type="radio" name="answer" value="4" id="answer4"><label for="answer4" id="label4"></label><br>
-                <input type="radio" name="answer" value="5" id="answer5"><label for="answer3" id="label5"></label><br>
                 <button onclick="checkAnswer()">Submit Answer</button>
             </article>
             <p id="result"></p>
+            <form id="initials">
+                <label>Save your highscore!</label><br>
+                <input type="text" name="initials" placeholder="Initials here"><br>
+                <button>Submit</button>
+            </form>
         </section>
     </div>
     </main>
